AGP Memory leak stress test.
Including adding some infra for configuring the metaspace size.

Bug: 123068209
Test: Added GradlePluginMemoryLeakTest
Change-Id: I76772c58bea7806bfd976c111c25ac1c0d8acdcb
(cherry picked from commit e06febbed72b35790cc6f99460b8b82f14d6f225)